lib/misc/ace.h

      /*
       * long on Linux has a variable size depending on the underlying
       * architecture.
       */
      typedef unsigned int   UNSIGNED32;
      typedef unsigned long  UNSIGNED32;
   typedef unsigned short UNSIGNED16;
   typedef unsigned char  UNSIGNED8;
         // Long is 64 bits in GCC.
         typedef unsigned long  ADSHANDLE;
         typedef unsigned __int64  ADSHANDLE;
      typedef unsigned long  ADSHANDLE;
   typedef ULONGLONG        UNSIGNED64;
   typedef LONGLONG         SIGNED64;
         typedef __int64          SIGNED64;
         typedef unsigned __int64 UNSIGNED64;
   typedef long long unsigned int   UNSIGNED64;
   typedef long long int            SIGNED64;
/*
 * Constants for MgGetOpenTables
 */
#define ADS_MGMT_MAX_PATH              260
#define ADS_MAX_USER_NAME        50
#define ADS_MAX_ADDRESS_SIZE     30
#define ADS_MAX_MGMT_APPID_SIZE  70
typedef struct
   {
   UNSIGNED16  usDays;        /* Number of days server has been up    */
   UNSIGNED16  usHours;       /* Number of hours server has been up   */
   UNSIGNED16  usMinutes;     /* Number of minutes server has been up */
   UNSIGNED16  usSeconds;     /* Number of seconds server has been up */
   } ADS_MGMT_UPTIME_INFO;
typedef struct
   {
   UNSIGNED32  ulInUse;       /* Number of items in use        */
   UNSIGNED32  ulMaxUsed;     /* Max number of items ever used */
   UNSIGNED32  ulRejected;    /* Number of items rejected      */
   } ADS_MGMT_USAGE_INFO;
typedef struct
   {
   UNSIGNED32           ulOperations;     /* Number operations since started */
   UNSIGNED32           ulLoggedErrors;   /* Number logged errors            */
   ADS_MGMT_UPTIME_INFO stUpTime;         /* Length of time ADS has been up  */
   ADS_MGMT_USAGE_INFO  stUsers;          /* Users in use, max, rejected     */
   ADS_MGMT_USAGE_INFO  stConnections;    /* Conns in use, max, rejected     */
   ADS_MGMT_USAGE_INFO  stWorkAreas;      /* WAs in use, max, rejected       */
   ADS_MGMT_USAGE_INFO  stTables;         /* Tables in use, max, rejected    */
   ADS_MGMT_USAGE_INFO  stIndexes;        /* Indexes in use, max, rejected   */
   ADS_MGMT_USAGE_INFO  stLocks;          /* Locks in use, max, rejected     */
   ADS_MGMT_USAGE_INFO  stTpsHeaderElems; /* TPS header elems in use, max    */
   ADS_MGMT_USAGE_INFO  stTpsVisElems;    /* TPS vis elems in use, max       */
   ADS_MGMT_USAGE_INFO  stTpsMemoElems;   /* TPS memo elems in use, max      */
   ADS_MGMT_USAGE_INFO  stWorkerThreads;  /* Worker threads in use, max      */
   ADS_MGMT_USAGE_INFO  stQueries;        /* Queries in use, max, rejected   */
   ADS_MGMT_USAGE_INFO  stStatefulUsers;  /* Stateful users in use          */
   ADS_MGMT_USAGE_INFO  stStatelessUsers; /* Stateless users in use          */
   } ADS_MGMT_ACTIVITY_INFO;
typedef struct
   {
   UNSIGNED8  aucUserName[ADS_MAX_USER_NAME]; /* Name of connected user    */
   UNSIGNED16 usConnNumber;                   /* NetWare conn # (NLM only) */
   UNSIGNED8  aucAuthUserName[ADS_MAX_USER_NAME]; /* Dictionary user name  */
   UNSIGNED8  aucAddress[ADS_MAX_ADDRESS_SIZE]; /* Network address of user */
   UNSIGNED8  aucOSUserLoginName[ADS_MAX_USER_NAME]; /* OS user login name */
   UNSIGNED8  aucTSAddress[ADS_MAX_ADDRESS_SIZE]; /* Terminal Services client IP Address */
   UNSIGNED8  aucApplicationID[ADS_MAX_MGMT_APPID_SIZE]; /* application id */
   UNSIGNED32 ulAveRequestCost;               /* estimated average cost of each server request */
   UNSIGNED16 usReserved1;                    /* reserved to maintain byte alignment (ace.pas structs are not packed) */
   } ADS_MGMT_USER_INFO;
typedef struct
   {
   UNSIGNED8  aucTableName[ADS_MGMT_MAX_PATH]; /* Fully qualified table name */
   UNSIGNED16 usLockType;                      /* Advantage locking mode     */
   } ADS_MGMT_TABLE_INFO;
typedef struct
   {
   UNSIGNED8  aucIndexName[ADS_MGMT_MAX_PATH]; /* Fully qualified table name */
   } ADS_MGMT_INDEX_INFO;
typedef struct
   {
   UNSIGNED32 ulRecordNumber;       /* Record number that is locked */
   } ADS_MGMT_RECORD_INFO;
typedef struct
   {
   UNSIGNED32 ulThreadNumber;                 /* Thread Number               */
   UNSIGNED16 usOpCode;                       /* Operation in progress       */
   UNSIGNED8  aucUserName[ADS_MAX_USER_NAME]; /* Name of user                */
   UNSIGNED16 usConnNumber;                   /* NetWare conn num (NLM only) */
   UNSIGNED16 usReserved1;                    /* Reserved                    */
   UNSIGNED8  aucOSUserLoginName[ADS_MAX_USER_NAME]; /* OS user login name   */
   } ADS_MGMT_THREAD_ACTIVITY;
/* GUID structure */
typedef struct
   {
   UNSIGNED32  Data1;
   UNSIGNED16  Data2;
   UNSIGNED16  Data3;
   UNSIGNED64  Data4;
   } ADS_GUID_DATA;
/*
 * Data dictionary properties related constants and structure
 */

typedef struct _ADD_FIELD_DESC_
   {
   UNSIGNED16  usFieldType;
   UNSIGNED16  usFieldLength;
   UNSIGNED16  usFieldDecimal;
   } ADD_FIELD_DESC;
UNSIGNED32 ENTRYPOINT AdsAddCustomKey( ADSHANDLE hIndex );
UNSIGNED32 ENTRYPOINT AdsAppendRecord( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsApplicationExit();
UNSIGNED32 ENTRYPOINT AdsAtBOF( ADSHANDLE    hTable,
                                UNSIGNED16   *pbBof );
UNSIGNED32 ENTRYPOINT AdsAtEOF( ADSHANDLE    hTable,
                                UNSIGNED16   *pbEof );
UNSIGNED32 ENTRYPOINT AdsBeginTransaction( ADSHANDLE hConnect );
UNSIGNED32 ENTRYPOINT AdsBinaryToFile( ADSHANDLE   hTable,
                                       UNSIGNED8   *pucFldName,
                                       UNSIGNED8   *pucFileName );
UNSIGNED32 ENTRYPOINT AdsCacheOpenCursors( UNSIGNED16 usOpen );
UNSIGNED32 ENTRYPOINT AdsCacheOpenTables( UNSIGNED16 usOpen );
UNSIGNED32 ENTRYPOINT AdsCacheRecords( ADSHANDLE hTable,
                                       UNSIGNED16 usNumRecords );
UNSIGNED32 ENTRYPOINT AdsCancelUpdate( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsCancelUpdate90( ADSHANDLE hTable, UNSIGNED32 ulOptions );
UNSIGNED32 ENTRYPOINT AdsCheckExistence( ADSHANDLE    hConnect,
                                         UNSIGNED8    *pucFileName,
                                         UNSIGNED16   *pusOnDisk );
UNSIGNED32 ENTRYPOINT AdsClearAllScopes( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsClearDefault( void );
UNSIGNED32 ENTRYPOINT AdsClearFilter( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsClearRelation( ADSHANDLE hTableParent );
UNSIGNED32 ENTRYPOINT AdsClearScope( ADSHANDLE  hIndex,
                                     UNSIGNED16 usScopeOption );
UNSIGNED32 ENTRYPOINT AdsCloneTable( ADSHANDLE  hTable,
                                     ADSHANDLE  *phClone );
UNSIGNED32 ENTRYPOINT AdsCloseAllIndexes( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsCloseAllTables( void );
UNSIGNED32 ENTRYPOINT AdsCloseIndex( ADSHANDLE hIndex );
UNSIGNED32 ENTRYPOINT AdsCloseTable( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsCloseCachedTables( ADSHANDLE hConnection );
UNSIGNED32 ENTRYPOINT AdsCommitTransaction( ADSHANDLE hConnect );
UNSIGNED32 ENTRYPOINT AdsConnect( UNSIGNED8  *pucServerName,
                                  ADSHANDLE  *phConnect );
UNSIGNED32 ENTRYPOINT AdsConnect26( UNSIGNED8  *pucServerName,
                                    UNSIGNED16 usServerTypes,
                                    ADSHANDLE  *phConnect );
UNSIGNED32 ENTRYPOINT AdsConnect60( UNSIGNED8  *pucServerPath,
                                    UNSIGNED16 usServerTypes,
                                    UNSIGNED8  *pucUserName,
                                    UNSIGNED8  *pucPassword,
                                    UNSIGNED32 ulOptions,
                                    ADSHANDLE  *phConnect );
UNSIGNED32 ENTRYPOINT AdsConnect101( UNSIGNED8 *pucConnectString,
                                     ADSHANDLE *phConnectionOptions,
                                     ADSHANDLE *phConnect );
UNSIGNED32 ENTRYPOINT AdsClearCachePool( UNSIGNED8 *pucConnectString );
UNSIGNED32 ENTRYPOINT AdsReapUnusedConnections( void );
UNSIGNED32 ENTRYPOINT AdsIsConnectionAlive(
                              ADSHANDLE        hConnect,
                              UNSIGNED16       *pbConnectionIsAlive );
UNSIGNED32 ENTRYPOINT AdsContinue( ADSHANDLE    hTable,
                                   UNSIGNED16   *pbFound );
UNSIGNED32 ENTRYPOINT AdsConvertTable( ADSHANDLE   hObj,
                                       UNSIGNED16  usFilterOption,
                                       UNSIGNED8   *pucFile,
                                       UNSIGNED16  usTableType );
UNSIGNED32 ENTRYPOINT AdsCopyTable( ADSHANDLE   hObj,
                                    UNSIGNED16  usFilterOption,
                                    UNSIGNED8   *pucFile );
UNSIGNED32 ENTRYPOINT AdsCopyTableContents( ADSHANDLE    hObjFrom,
                                            ADSHANDLE    hTableTo,
                                            UNSIGNED16   usFilterOption );
UNSIGNED32 ENTRYPOINT AdsCopyTableStructure( ADSHANDLE   hTable,
                                             UNSIGNED8   *pucFile );
UNSIGNED32 ENTRYPOINT AdsCreateIndex( ADSHANDLE    hObj,
                                      UNSIGNED8    *pucFileName,
                                      UNSIGNED8    *pucTag,
                                      UNSIGNED8    *pucExpr,
                                      UNSIGNED8    *pucCondition,
                                      UNSIGNED8    *pucWhile,
                                      UNSIGNED32   ulOptions,
                                      ADSHANDLE    *phIndex );
UNSIGNED32 ENTRYPOINT AdsCreateIndex61( ADSHANDLE    hObj,
                                        UNSIGNED8    *pucFileName,
                                        UNSIGNED8    *pucTag,
                                        UNSIGNED8    *pucExpr,
                                        UNSIGNED8    *pucCondition,
                                        UNSIGNED8    *pucWhile,
                                        UNSIGNED32   ulOptions,
                                        UNSIGNED32   ulPageSize,
                                        ADSHANDLE    *phIndex );
   UNSIGNED32 ENTRYPOINT AdsRegisterProgressCallback(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent ) );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, UNSIGNED32 ulCallbackID ),
         UNSIGNED32 ulCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction101(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, SIGNED64 qCallbackID ),
         SIGNED64 qCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterSQLAbortFunc( UNSIGNED32 (WINAPI *lpfnCallback)(void) );
   UNSIGNED32 ENTRYPOINT AdsRegisterUDF( ADSHANDLE  hObj,
                                         UNSIGNED16 usType,
                                         UNSIGNED32 (WINAPI *lpfnUDF)(void) );