lib/misc/ace.pas


      ADS_MGMT_ACTIVITY_INFO = packed record
         ulOperations:   UNSIGNED32;   { Number operations since started }
         ulLoggedErrors:   UNSIGNED32;   { Number logged errors }
         stUpTime:   ADS_MGMT_UPTIME_INFO;   { Length of time ADS has been up }
         stUsers:   ADS_MGMT_USAGE_INFO;   { Users in use, max, rejected }
         stConnections:   ADS_MGMT_USAGE_INFO;   { Conns in use, max, rejected }
         stWorkAreas:   ADS_MGMT_USAGE_INFO;   { WAs in use, max, rejected }
         stTables:   ADS_MGMT_USAGE_INFO;   { Tables in use, max, rejected }
         stIndexes:   ADS_MGMT_USAGE_INFO;   { Indexes in use, max, rejected }
         stLocks:   ADS_MGMT_USAGE_INFO;   { Locks in use, max, rejected }
         stTpsHeaderElems:   ADS_MGMT_USAGE_INFO;   { TPS header elems in use, max }
         stTpsVisElems:   ADS_MGMT_USAGE_INFO;   { TPS vis elems in use, max }
         stTpsMemoElems:   ADS_MGMT_USAGE_INFO;   { TPS memo elems in use, max }
         stWorkerThreads:   ADS_MGMT_USAGE_INFO;   { Worker threads in use, max }
         stQueries:   ADS_MGMT_USAGE_INFO;   { Queries in use, max, rejected }
         stStatefulUsers:   ADS_MGMT_USAGE_INFO;   { Stateful users in use }
         stStatelessUsers:   ADS_MGMT_USAGE_INFO;   { Stateless users in use }
      end;

      pADS_MGMT_ACTIVITY_INFO = ^ADS_MGMT_ACTIVITY_INFO;

      ADS_MGMT_USER_INFO = packed record
         aucUserName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;   { Name of connected user }
         usConnNumber:   UNSIGNED16;   { NetWare conn # (NLM only) }
         aucDictionaryName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;   { Dictionary user name }
         aucAddress:    array[0..ADS_MAX_ADDRESS_SIZE - 1] of AceChar;   { Network address of user }
         aucOSUserLoginName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;   { OS user login name }
         aucTSAddress:    array[0..ADS_MAX_ADDRESS_SIZE - 1] of AceChar;   { Terminal Services client IP Address }
         aucApplicationID:    array[0..ADS_MAX_MGMT_APPID_SIZE - 1] of AceChar;   { application id }
         ulAveRequestCost:   UNSIGNED32;   { estimated average cost of each server request }
         usReserved1:   UNSIGNED16;   { reserved to maintain byte alignment (ace.pas structs are not packed) }
      end;

      pADS_MGMT_USER_INFO = ^ADS_MGMT_USER_INFO;
      ADSMgUserArray = array[0..ADS_USER_ARRAY_SIZE - 1] of ADS_MGMT_USER_INFO;
      pADSMgUserArray = ^ADSMgUserArray;

      ADS_MGMT_TABLE_INFO = packed record
         aucTableName:    array[0..ADS_MGMT_MAX_PATH - 1] of AceChar;   { Fully qualified table name }
         usLockType:   UNSIGNED16;   { Advantage locking mode }
      end;

      pADS_MGMT_TABLE_INFO = ^ADS_MGMT_TABLE_INFO;
      ADSMgTableArray = array[0..ADS_TABLE_ARRAY_SIZE - 1] of ADS_MGMT_TABLE_INFO;
      PADSMgTableArray = ^ADSMgTableArray;

      ADS_MGMT_INDEX_INFO = packed record
         aucIndexName:    array[0..ADS_MGMT_MAX_PATH - 1] of AceChar;   { Fully qualified table name }
      end;

      pADS_MGMT_INDEX_INFO = ^ADS_MGMT_INDEX_INFO;
      ADSMgIndexArray = array[0..ADS_INDEX_ARRAY_SIZE - 1] of ADS_MGMT_INDEX_INFO;
      PADSMgIndexArray = ^ADSMgIndexArray;

      ADS_MGMT_RECORD_INFO = packed record
         ulRecordNumber:   UNSIGNED32;   { Record number that is locked }
      end;

      pADS_MGMT_RECORD_INFO = ^ADS_MGMT_RECORD_INFO;
      ADSMgLocksArray = array[0..ADS_LOCK_ARRAY_SIZE - 1] of ADS_MGMT_RECORD_INFO;
      PADSMgLocksArray = ^ADSMgLocksArray;

      ADS_MGMT_THREAD_ACTIVITY = packed record
         ulThreadNumber:   UNSIGNED32;   { Thread Number }
         usOpCode:   UNSIGNED16;   { Operation in progress }
         aucUserName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;   { Name of user }
         usConnNumber:   UNSIGNED16;   { NetWare conn num (NLM only) }
         usReserved1:   UNSIGNED16;   { Reserved }
         aucOSUserLoginName:    array[0..ADS_MAX_USER_NAME - 1] of AceChar;   { OS user login name }
      end;

      pADS_MGMT_THREAD_ACTIVITY = ^ADS_MGMT_THREAD_ACTIVITY;
      ADSMgThreadsArray = array[0..ADS_THREAD_ARRAY_SIZE - 1] of ADS_MGMT_THREAD_ACTIVITY;
      PADSMgThreadsArray = ^ADSMgThreadsArray;

      {* GUID structure *}
      ADS_GUID_DATA = packed record
         Data1:   UNSIGNED32;
         Data2:   UNSIGNED16;
         Data3:   UNSIGNED16;
         Data4:   UNSIGNED64;
      end;

      pADS_GUID_DATA = ^ADS_GUID_DATA;

      ADD_FIELD_DESC = packed record
         usFieldType:   UNSIGNED16;
         usFieldLength:   UNSIGNED16;
         usFieldDecimal:   UNSIGNED16;
      end;

      pADD_FIELD_DESC = ^ADD_FIELD_DESC;


      function AdsAddCustomKey( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsAppendRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsApplicationExit:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsAtBOF( hTable: ADSHANDLE;
                         pbBof: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsAtEOF( hTable: ADSHANDLE;
                         pbEof: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsBeginTransaction( hConnect: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsBinaryToFile( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                pucFileName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCacheOpenCursors( usOpen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCacheOpenTables( usOpen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCacheRecords( hTable: ADSHANDLE;
                                usNumRecords: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCancelUpdate( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCancelUpdate90( hTable: ADSHANDLE;
                                  ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCheckExistence( hConnect: ADSHANDLE;
                                  pucFileName: PAceChar;
                                  pusOnDisk: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearAllScopes( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearDefault:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearFilter( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearRelation( hTableParent: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearScope( hIndex: ADSHANDLE;
                              usScopeOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloneTable( hTable: ADSHANDLE;
                              phClone: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloseAllIndexes( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloseAllTables:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloseIndex( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloseTable( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCloseCachedTables( hConnection: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCommitTransaction( hConnect: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsConnect( pucServerName: PAceChar;
                           phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsConnect26( pucServerName: PAceChar;
                             usServerTypes: UNSIGNED16;
                             phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsConnect60( pucServerPath: PAceChar;
                             usServerTypes: UNSIGNED16;
                             pucUserName: PAceChar;
                             pucPassword: PAceChar;
                             ulOptions: UNSIGNED32;
                             phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsConnect101( pucConnectString: PAceChar;
                              phConnectionOptions: pADSHANDLE;
                              phConnect: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearCachePool( pucConnectString: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsReapUnusedConnections:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsIsConnectionAlive( hConnect: ADSHANDLE;
                                     pbConnectionIsAlive: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsContinue( hTable: ADSHANDLE;
                            pbFound: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsConvertTable( hObj: ADSHANDLE;
                                usFilterOption: UNSIGNED16;
                                pucFile: PAceChar;
                                usTableType: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCopyTable( hObj: ADSHANDLE;
                             usFilterOption: UNSIGNED16;
                             pucFile: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCopyTableContents( hObjFrom: ADSHANDLE;
                                     hTableTo: ADSHANDLE;
                                     usFilterOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCopyTableStructure( hTable: ADSHANDLE;
                                      pucFile: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateIndex( hObj: ADSHANDLE;
                               pucFileName: PAceChar;
                               pucTag: PAceChar;
                               pucExpr: PAceChar;
                               pucCondition: PAceChar;
                               pucWhile: PAceChar;
                               ulOptions: UNSIGNED32;
                               phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCreateIndex61( hObj: ADSHANDLE;
                                 pucFileName: PAceChar;
                                 pucTag: PAceChar;
                                 pucExpr: PAceChar;
                                 pucCondition: PAceChar;
                                 pucWhile: PAceChar;
                                 ulOptions: UNSIGNED32;
                                 ulPageSize: UNSIGNED32;
                                 phIndex: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
